mobile about page comlpeat 0.0.4 (Fix spacing)

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,2 +1,102 @@
 @charset "utf8";
+@import url(https://fonts.googleapis.com/css?family=PT+Sans);
+
 /* css styles */
+a{
+  color: inherit;
+  text-decoration: none;
+}
+h1, h2, h3, p {
+  font-family: 'Lato', sans-serif;
+  font-weight: lighter;
+}
+h2 {
+  font-size: 72px;
+  text-align: center;
+}
+h3 {
+  font-size: 30px;
+  font-weight: normal;
+}
+h3, p {
+  text-align: center;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+p {
+  font-size: 20px;
+}
+body {
+  margin: 0 auto;
+}
+li {
+  padding: .0004em 0 0.01em 1.626em;
+  margin-bottom: 0.2em;
+  text-indent: 0.4em;
+  font-weight: normal;
+  list-style: none;
+  background-repeat: no-repeat;
+  background-size: 9%;
+}
+h2.smargin{
+  margin-bottom: 0;
+}
+.fifty {
+  float: left;
+  width: 50%;
+}
+.li1 {
+  background-image: url('../img/icon/icon_1.svg');
+}
+.li2 {
+  background-image: url('../img/icon/icon_2.svg');
+}
+.li3 {
+  background-image: url('../img/icon/icon_3.svg');
+}
+.li4 {
+  background-image: url('../img/icon/icon_4.svg');
+}
+.li5 {
+  background-image: url('../img/icon/icon_5.svg');
+}
+.li6 {
+  background-image: url('../img/icon/icon_6.svg');
+}
+.m_hide {
+  display: none;
+}
+.hero {
+  width: 100%;
+  height: 70%;
+  background-image: url('../img/hero/hero_forest.jpg');
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.hero h2 {
+  font-size: 72px;
+  color: #fff;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.w {
+  background-color: #fff;
+  display: block;
+  overflow: auto;
+}
+.g {
+  background-color: #eeeeee;
+  display: block;
+  overflow: auto;
+}
+.icon {
+  display: block;
+  margin: 15 auto;
+  width: 15%;
+  height: auto;
+}
